--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+body{
+  background-color: aliceblue;
+  padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h2{
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
 }
 p{
     margin: 3px;
@@ -11,8 +18,6 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    
-    border-radius:  0px 0px 15px 15px;
   }
   
   li {
@@ -25,6 +30,8 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
   }
   header{
     text-align: center;
@@ -41,15 +48,7 @@ ul {
     background-color: #333;
     border-radius:  0px 0px 15px 15px;
   }
-body{
-   background-color: aliceblue; 
-}
-/*
-main{
-  background-image: url("file:img/music.webp");
-  
-  color: aliceblue;
-} */
+
 
 .a{
     background-color: aquamarine;
@@ -61,10 +60,9 @@ main{
 }
 .mail{
   text-decoration: none;
+  color: rgb(76, 17, 74);
   background-color: bisque;
-  color: rgb(116, 93, 63);
-  padding: 5px 5px 5px 5px;
-  margin: 10px;
+  border: solid blue;
 }
 footer{
     background-color: #333;
