--- a/style.css
+++ b/style.css
@@ -49,6 +49,27 @@ ul {
     border-radius:  0px 0px 15px 15px;
   }
 
+  table, th, td {
+    border-collapse:collapse ;
+    margin:  0;
+    padding: 0;
+    font-size: 0.9em;
+   
+    border: 1px solid black;
+    justify-content: center;
+
+  }
+  
+  th{
+   
+    float: left;
+  }
+  td{
+    float: right;
+    margin: 25px 0;
+    min-height: 50px;
+    min-width: 100px;
+  }
 
 .a{
     background-color: aquamarine;
