--- a/style.css
+++ b/style.css
@@ -49,23 +49,24 @@ ul {
     border-radius:  0px 0px 15px 15px;
   }
 
-  table, th, td {
+  table, th, td { 
+    display: flex;
     border-collapse:collapse ;
-    margin:  0;
-    padding: 0;
+    margin: 25px 0;
+    padding: 15px;
     font-size: 0.9em;
    
     border: 1px solid black;
-    justify-content: center;
+    
 
   }
   
   th{
-   
     float: left;
+    height: 40px;
+    width: 50px;
   }
   td{
-    float: right;
     margin: 25px 0;
     min-height: 50px;
     min-width: 100px;
